# PSVita-RE-tools

./: .gitignore  LICENSE  README.md
ErrorResolver/src/: ErrorResolver.c  Makefile
FAGDec/src/: build.sh
FAGDec/src/app/: CMakeLists.txt  credit.c  credit.h  draw.c  draw.h  dump.c  dump.h  game.c  game.h  inflate.c  inflate.h  main.c  menu.c  menu.h  sfo.c  sfo.h  sha256.c  status.c  status.h  utils.c  utils.h
FAGDec/src/common/: elf.h  self.h
FAGDec/src/kplugin/: CMakeLists.txt  context_130_base_kernel.h  context_130_base_sceshell.h  exports.yml  kentente.c  kentente.h  kernel.h
FAGDec/src/uplugin/: CMakeLists.txt  exports.yml  userAllied.c  userAllied.h
Kdumper/: CMakeLists.txt
Kdumper/release/: Kdumper.velf  Kdumper.vpk  RUN_TCP_DUMP.bat
Kdumper/src/: CMakeLists.txt  debugScreen.c  debugScreen.h  main.c
Kdumper/src/sce_sys/livearea/contents/: template.xml
PSMLogUSB/: CMakeLists.txt
PSMLogUSB/src/: main.c
PSVita-ELF-builder/release/: README.md  _RUNME.BAT
PSVita-ELF-builder/src/: Makefile  file.c  file.h  main.c
PSVita-RTC-set/src/: CMakeLists.txt  Makefile  README.md  exports.yml  kernel.c
PSVita-error-code-resolver/src/: Makefile  main.c
PrincessLog/src/NetDbgLogPc/: Makefile  icon.res
PrincessLog/src/NetDbgLogPc/source/: icon.h  icon.rc  main.cpp
PrincessLog/src/NetLoggingMgr/: CMakeLists.txt
PrincessLog/src/NetLoggingMgr/NetLoggingMgrKernel_new/src/: main.c
PrincessLog/src/NetLoggingMgr/NetLoggingMgrSettings_Test/: fixedlight_v.gxp
PrincessLog/src/NetLoggingMgr/include/: NetLoggingMgr.h  NetLoggingMgrInternal.h
PrincessLog/src/NetLoggingMgr/kernel_module/: CMakeLists.txt  exports.yml
PrincessLog/src/NetLoggingMgr/kernel_module/src/: main.c  ringbuf.c  ringbuf.h
PrincessLog/src/NetLoggingMgr/settings_app/: CMakeLists.txt  clear_f.gxp  clear_v.gxp  fixedlight_f.gxp
PrincessLog/src/NetLoggingMgr/settings_app/src/: debugScreen.h  debugScreenFont.c  gxm.c  gxm.h  main.c
ShipLog2.0/release/: ShipLog.vpk  backdoor_exe.skprx
ShipLog2.0/src/backdoor.exe/: CMakeLists.txt  backdoor_exe.c  backdoor_exe.h  cj_net.c  exports.yml  utils.c  utils.h  vita_netdbg.h
ShipLog2.0/src/common/: parser.c  parser.h  settings.c  settings.h
ShipLog2.0/src/config_app/: CMakeLists.txt  dialog.c  dialog.h  draw.c  draw.h  main.c  menu.c  menu.h
THGN/src/: Makefile  main.cpp  self.h
THGN/src/import/: vita-import-parse.c  vita-import.c  yamltree.h
base_hooker/src/: CMakeLists.txt  base_hooker.c  base_hooker.yml
bootimage_extract/src/: README.md  main.c
elf_injector/src/: Makefile  main.c  self.h  sha256.h
index-dat-tool/: Makefile  README.md  aes.c  aes.h  common.h  main.c  mingw_mmap.c  mingw_mmap.h  sha1.c  sha1.h  sha2.c  sha2.h  tools.c  tools.h  types.h
ioPlus/ioPlus-0.1/release/: ioplus.skprx
ioPlus/ioPlus-0.1/src/: CMakeLists.txt  exports.yml  ioplus.c
ioPlus/ioPlus-0.2/: README_DO_NOT_USE_THIS_USE_0.1.txt
ioPlus/ioPlus-0.2/release/: ioplus.skprx
ioPlus/ioPlus-0.2/src/: CMakeLists.txt  exports.yml  ioplus.c
kbl_elf_extract/src/: Makefile  main.c
kdump-extract/src/: Makefile  main.c  self.h
kernel_bootimage_extract/: README.md
kernel_bootimage_extract/src/: Makefile  README.md  elf.h  main.c
nids-extract/src/: Makefile  main.c  self.h
noASLR/release/: noaslr.skprx
noASLR/src/: CMakeLists.txt  exports.yml  main.c
physmem-dumper/src/: CMakeLists.txt  exports.yml  kernel.c
psp2-emmc-extract/src/: Makefile  main.c
psp2-kbl-elf-extract/src/: Makefile  main.c  module_info_parser.c  sce_module_info.h
psp2-kernel-bootimage-extract/: README.md
psp2-kernel-bootimage-extract/src/: Makefile  main.c  module_info_parser.c  module_info_parser.h
psp2-syslibtrace-nids-extract/src/: Makefile  elf.h  main.c  types.h
unarzl/src/: LICENSE  Makefile  main.c  unarzl.c  unarzl.h
unity_debug/release/: unity_debug.suprx
unity_debug/src/: CMakeLists.txt  unity_debug.c  unity_debug.yml
vita-unmake-fself/src/: Makefile  main.c
vitadecompiler-mod/src/: Makefile  asprintf.c  instructions.h  main.cpp  main.h  relocate.c  relocate.h  self.h  utils.cpp  utils.h  vita.cpp  vita.h
vitadecompiler-mod/src/import/: vita-import.h  yamltree.c  yamltreeutil.c  yamltreeutil.h
